--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">GoBees</string>
+    <string name="statistics_title">Statistics</string>
+    <string name="settings_title">Settings</string>
+    <string name="gobees_logo">GoBees logo</string>
+    <string name="no_apiaries">You have no apiaries!</string>
+    <string name="add_icon">Add</string>
+    <string name="home_icon">Home icon</string>
 </resources>
