Implement load apiaries #67

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="no_apiaries">You have no apiaries!</string>
     <string name="add_icon">Add</string>
     <string name="home_icon">Home icon</string>
+    <string name="refresh">Refresh</string>
+    <string name="no_apiaries_add">Add a new apiary +</string>
+    <string name="loading_apiaries_error">Error while loading apiaries.</string>
 </resources>
