--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="loading_apiaries_error">Error while loading apiaries.</string>
     <string name="name_hint">Name</string>
     <string name="notes_hint">Notes...</string>
+    <string name="edit_apiary">Edit apiary</string>
+    <string name="add_apiary">Add apiary</string>
+    <string name="empty_apiary_message">Apiary name cannot be empty!</string>
+    <string name="save_apiary_error_message">Error while saving apiary.</string>
 </resources>
